test_regress/t/t_func_const_packed_struct_bad2.out
%Warning-USERFATAL: "f_add = 15"
                    ... For warning description see https://verilator.org/warn/USERFATAL?v=latest
                    ... Use "/* verilator lint_off USERFATAL */" and lint_on around source to disable this message.
%Error: t/t_func_const_packed_struct_bad2.v:20:21: Expecting expression to be constant, but can't determine constant for FUNCREF 'f_add2'
                                                 : ... In instance t
        t/t_func_const_packed_struct_bad2.v:31:9: ... Location of non-constant STOP: $stop executed during function constification; maybe indicates assertion firing
        t/t_func_const_packed_struct_bad2.v:43:16: ... Called from f_add() with parameters:
           params = [0 = '{a: 32'h7, foo: 6'hb, sub_params: '{b: 32'h37, bar: 8'h6f}}, 1 = '{a: 32'h3039, foo: 6'hc, sub_params: '{b: 32'h8, bar: 8'h70}}]
        t/t_func_const_packed_struct_bad2.v:20:21: ... Called from f_add2() with parameters:
           a = ?32?h7
           b = ?32?h8
           c = ?32?h9
   20 |    localparam P24 = f_add2(7, 8, 9);
      |                     ^~~~~~
%Error: Exiting due to
